# boardy-conversation-signals

./: .gitignore  LICENSE  PRODUCTIONIZATION.md  README.md  demo.py  env.example  pyproject.toml  real_evaluation.py  real_evaluation_results.json  requirements.txt
boardy_signals/: __init__.py  config.py  main.py
boardy_signals/evaluation/: __init__.py  eval_set.py  metrics.py  reporter.py
boardy_signals/features/: __init__.py  extractor.py  heuristics.py  llm_analyzer.py  text_processing.py
boardy_signals/utils/: __init__.py  logging.py  text_processing.py
